On click of backdrop the menu item should close as an expected behaviour, modify styles to make it look better

--- a/src/Components/SideDrawer/SideDrawer.css
+++ b/src/Components/SideDrawer/SideDrawer.css
@@ -15,6 +15,10 @@
   .side-drawer.open {
     transform: translateX(0);
   }
+
+  .back-button {
+    margin-left: 0.5rem
+  }
   
   .side-drawer ul {
     height: 100%;
