--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .root {
-  height: '100%'
-}
+    height: '100%';
+  }
 
-.container {
-  margin-top: '64px'
-}
+  .formContainer {
+    margin-top: 64px;
+  }
